--- a/public/css/style.css
+++ b/public/css/style.css
@@ -178,28 +178,42 @@ a {
 }
 
 .app-modal__dialog {
+  position: relative;
   max-width: 600px;
   max-height: 100%;
   width: 100%;
-}
-
-.app-modal__content {
-  will-change: transform, opacity;
-  position: relative;
-  padding: 2.4rem;
   background: #fff;
   background-clip: padding-box;
   box-shadow: 0 12px 15px 0 rgba(0,0,0,0.25);
   opacity: 1;
+  will-change: transform, opacity;
   -webkit-transition: all 0.25s cubic-bezier(0.23, 1, 0.32, 1);
   transition: all 0.25s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .app-modal__close {
   position: absolute;
-  top: 1em;
-  right: 1em;
+  top: 1rem;
+  right: 1rem;
   color: rgba(0, 0, 0, 0.5);
+}
+
+.app-modal__dialog--head > .app-modal__close {
+  color: #fff;
+}
+
+.app-modal__head {
+  line-height: 6rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 2rem;
+  background-color: #795548;
+  color: #fff;
+}
+
+.app-modal__content {
+  position: relative;
+  padding: 2.4rem;
 }
 
 .app-modal__title {
@@ -1287,6 +1301,18 @@ a {
 .app-game__box-content .app-game__piece-image {
   width: 100%;
   height: 100%;
+}
+
+.app-game__result-color {
+  display: inline-block;
+}
+
+.app-game__result-icon {
+  display: inline-block;
+}
+
+.app-game__result-item {
+  display: inline-block;
 }
 
 .app-table--game {
