--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -1,41 +1,17 @@
-<div element class="app-element app-ranking mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div element-content class="app-element__body">
-        <table class="app-table app-table--ranking mdl-data-table mdl-js-data-table">
-            <tbody>
-                <tr ng-repeat="rank in ranking" show-profile="rank">
-                    <td class="app-table__rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
-                    <td class="app-table__user mdl-data-table__cell--non-numeric">
-                        <img class="app-table__avatar" ng-src="{{rank.avatar}}">
-                        <span class="app-table__name">{{ rank.name }}</span>
-                    </td>
-                    <td class="app-table__points">{{ rank.points }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <div ng-if="pages"
-             class="app-ranking__pagination">
-            <div class="app-ranking__pagination-content">
-                <form ng-submit="setPage(page)" 
-                      name="pagination"
-                      class="app-ranking__pagination-form">
-                    <div class="app-form__textfield app-ranking__pagination-textfield">
-                        <input ng-model="page" type="text" ng-blur="setPage(page)">
-                    </div>
-                    <span class="app-ranking__pagination-count"> / {{ pages.last }}</span>
-                </form>
-                <button ng-show="pages.prev"
-                    ng-click="setPage(pages.prev)"
-                    class="app-ranking__pagination-prev mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                    <i class="material-icons" ng-if="user.lang !== 'ar'">navigate_before</i>
-                    <i class="material-icons" ng-if="user.lang === 'ar'">navigate_next</i>
-                </button>
-                <button ng-show="pages.next"
-                        ng-click="setPage(pages.next)"
-                        class="app-ranking__pagination-next mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                    <i class="material-icons" ng-if="user.lang === 'ar'">navigate_before</i>
-                    <i class="material-icons" ng-if="user.lang !== 'ar'">navigate_next</i>
-                </button>
-            </div>
-        </div>
+<div class="app-ranking mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <table class="app-table app-table--ranking mdl-data-table mdl-js-data-table">
+        <tbody>
+            <tr ng-repeat="rank in ranking" show-profile="rank" ng-class="{'is-user': rank.uid === user.uid }">
+                <td class="app-table__rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
+                <td class="app-table__user mdl-data-table__cell--non-numeric">
+                    <img class="app-table__avatar" ng-src="{{rank.avatar}}">
+                    <span class="app-table__name">{{ rank.name }}</span>
+                </td>
+                <td class="app-table__points">{{ rank.points }}</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="app-pagination">
+        <pagination></pagination>
     </div>
 </div>
