--- a/public/index.ejs
+++ b/public/index.ejs
@@ -159,6 +159,14 @@
                 <pagination></pagination>
             </div>
         </div>
+
+        <div class="app-button__fixed">
+            <button class="app-button mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"
+                    ng-hide="isFacebookApp || isGame"
+                    ng-click="logout()">
+                <i class="material-icons">power_settings_new</i>
+            </button>
+        </div>
           
         <div id="fb-root"></div>
 
