--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1554,8 +1554,6 @@ a {
   }
 
   .app-button__fixed {
-    display: block;
-    position: fixed;
     right: 15px;
     bottom: 15px;
     z-index: 9;
@@ -1581,33 +1579,6 @@ a {
 
   .app-footer {
     font-size: 13px;
-  }
-}
-
-@media screen and (max-height: 768px) {
-  .app-pagination {
-    display: none;
-  }
-
-  .app-pagination--fixed {
-    z-index: 9;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-justify-content: flex-start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    -webkit-flex-shrink: 0;
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
-    box-shadow: 2px 0 2px 0 rgba(0,0,0,.14), 3px 0 1px -2px rgba(0,0,0,.2), 1px 0 5px 0 rgba(0,0,0,.12);
   }
 }
 
@@ -1684,6 +1655,42 @@ a {
 
   .app-profile--game .app-profile__name {
     max-width: 450px;
+  }
+
+  .app-pagination {
+    display: none;
+  }
+
+  .app-pagination--fixed {
+    z-index: 9;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    box-shadow: 2px 0 2px 0 rgba(0,0,0,.14), 3px 0 1px -2px rgba(0,0,0,.2), 1px 0 5px 0 rgba(0,0,0,.12);
+  }
+
+  .app-button__fixed .app-button {
+    width: 30px;
+    height: 30px;
+    min-width: 30px;
+  }
+
+  .app-button__fixed--logout {
+    top: 13px;
+    right: 13px;
   }
 }
 
@@ -1889,12 +1896,6 @@ a {
     position: absolute;
     right: 6px;
     top: 6px;
-  }
-
-  .app-button__fixed .app-button {
-    width: 30px;
-    height: 30px;
-    min-width: 30px;
   }
 
   .app-button__fixed--game {
