--- a/public/index.ejs
+++ b/public/index.ejs
@@ -160,7 +160,7 @@
             </div>
         </div>
 
-        <div class="app-button__fixed">
+        <div class="app-button__fixed app-button__fixed--logout">
             <button class="app-button mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"
                     ng-hide="isFacebookApp || isGame"
                     ng-click="logout()">
